--- a/nginx-config/quotes-app.conf
+++ b/nginx-config/quotes-app.conf
@@ -1,146 +1,114 @@
-# # Quotes Application Nginx Configuration
-# # Location: /etc/nginx/sites-available/quotes-app
+# Quotes Application Nginx Configuration
+# Location: /etc/nginx/sites-available/quotes-app
 
-# upstream frontend {
-#     server 127.0.0.1:5002;
-#     keepalive 32;
-# }
+upstream frontend {
+    server 127.0.0.1:5002;
+    keepalive 32;
+}
 
-# upstream api {
-#     server 127.0.0.1:5001;
-#     keepalive 32;
-# }
+upstream api {
+    server 127.0.0.1:5001;
+    keepalive 32;
+}
 
-# server {
-#     listen 80 default_server;
-#     listen [::]:80 default_server;
-#     server_name _;
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
     
-#     # Include deployment-specific headers
-#     include /home/ubuntu/quotes-app/nginx-deployment.conf;
-    
-#     # Security headers
-#     add_header X-Frame-Options "SAMEORIGIN" always;
-#     add_header X-Content-Type-Options "nosniff" always;
-#     add_header X-XSS-Protection "1; mode=block" always;
-    
-#     # Logging
-#     access_log /var/log/nginx/quotes-app-access.log combined;
-#     error_log /var/log/nginx/quotes-app-error.log warn;
-    
-#     # Enable gzip
-#     gzip on;
-#     gzip_vary on;
-#     gzip_proxied any;
-#     gzip_comp_level 6;
-#     gzip_types text/plain text/css text/xml text/javascript 
-#                application/json application/javascript application/xml;
-    
-#     # Health check endpoint (for ALB)
-#     location /health {
-#         access_log off;
-#         return 200 "healthy\n";
-#         add_header Content-Type text/plain;
-#     }
-    
-#     # Deployment info endpoint
-#     location /deployment-info {
-#         access_log off;
-#         default_type application/json;
-#         alias /home/ubuntu/quotes-app/.deployment-info;
-        
-#         # If file doesn't exist, return default
-#         try_files $uri =404;
-#     }
-    
-#     # Nginx status (internal only)
-#     location /nginx-status {
-#         stub_status on;
-#         access_log off;
-#         allow 127.0.0.1;
-#         deny all;
-#     }
-    
-#     # API routes
-#     location /api/ {
-#         proxy_pass http://api/;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header Connection "";
-        
-#         # Timeouts
-#         proxy_connect_timeout 60s;
-#         proxy_send_timeout 60s;
-#         proxy_read_timeout 60s;
-        
-#         # CORS
-#         add_header Access-Control-Allow-Origin * always;
-#         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        
-#         if ($request_method = 'OPTIONS') {
-#             return 204;
-#         }
-#     }
-    
-#     # Frontend application
-#     location / {
-#         proxy_pass http://frontend/;
-#         proxy_http_version 1.1;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         proxy_set_header Connection "";
-        
-#         # WebSocket support
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection "upgrade";
-        
-#         # Timeouts
-#         proxy_connect_timeout 60s;
-#         proxy_send_timeout 60s;
-#         proxy_read_timeout 60s;
-#     }
-    
-#     # Static files caching
-#     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-#         proxy_pass http://frontend;
-#         expires 7d;
-#         add_header Cache-Control "public, immutable";
-#     }
-# }
-location / {
-    proxy_pass http://localhost:5002;
-    
-    # Cache busting for frontend
-    add_header Cache-Control 'no-cache, no-store, must-revalidate';
-    add_header Pragma 'no-cache';
-    add_header Expires '0';
-    
-    # Include deployment headers
+    # Include deployment-specific headers
     include /home/ubuntu/quotes-app/nginx-deployment.conf;
     
-    # Connection handling
-    proxy_http_version 1.1;
-    proxy_set_header Connection '';
-    proxy_buffering off;
-}
-
-location /api/ {
-    proxy_pass http://localhost:5001/;
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
     
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
+    # Logging
+    access_log /var/log/nginx/quotes-app-access.log combined;
+    error_log /var/log/nginx/quotes-app-error.log warn;
     
-    proxy_connect_timeout 10s;
-    proxy_send_timeout 30s;
-    proxy_read_timeout 30s;
-}
-
-location /health {
-    proxy_pass http://localhost:5001/health;
-    access_log off;
+    # Enable gzip
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types text/plain text/css text/xml text/javascript 
+               application/json application/javascript application/xml;
+    
+    # Health check endpoint (for ALB)
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+    
+    # Deployment info endpoint
+    location /deployment-info {
+        access_log off;
+        default_type application/json;
+        alias /home/ubuntu/quotes-app/.deployment-info;
+        
+        # If file doesn't exist, return default
+        try_files $uri =404;
+    }
+    
+    # Nginx status (internal only)
+    location /nginx-status {
+        stub_status on;
+        access_log off;
+        allow 127.0.0.1;
+        deny all;
+    }
+    
+    # API routes
+    location /api/ {
+        proxy_pass http://api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # CORS
+        add_header Access-Control-Allow-Origin * always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+    }
+    
+    # Frontend application
+    location / {
+        proxy_pass http://frontend/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+        
+        # WebSocket support
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+    
+    # Static files caching
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        proxy_pass http://frontend;
+        expires 7d;
+        add_header Cache-Control "public, immutable";
+    }
 }
