--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches: [main]
   #workflow_dispatch:
-
 env:
   AWS_REGION: ap-south-1
   BLUE_TG_ARN: ${{ secrets.BLUE_TARGET_GROUP_ARN }}
@@ -17,14 +16,18 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.set_tag.outputs.image_tag }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set image tag
-        id: tag
-        run: echo "TAG=latest" >> $GITHUB_ENV
+        id: set_tag
+        run: |
+          echo "image_tag=latest" >> $GITHUB_OUTPUT
+          echo "TAG=latest" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -44,7 +47,6 @@ jobs:
             docker push $IMAGE_NAME:latest
           done
 
-
       - name: Upload deployment files to S3
         run: |
           sed -i "s|build: ./db|image: ${{ secrets.DOCKER_USERNAME }}/quotes-db:${TAG}|g" docker-compose.yml
@@ -55,7 +57,7 @@ jobs:
           aws s3 cp nginx-config/ s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/nginx-config/ --recursive
           aws s3 cp deployment/ s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/deployment/ --recursive
 
-          echo "Deployment files uploaded to S3"
+          echo "✅ Deployment files uploaded to S3"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -86,16 +88,13 @@ jobs:
             --launch-template LaunchTemplateId=${{ env.LAUNCH_TEMPLATE_ID }} \
             --count 1 \
             --subnet-id ${{ env.PRIVATE_SUBNET_ID }} \
-            --tag-specifications "ResourceType=instance,Tags=[
-              {Key=Environment,Value=green},
-              {Key=Version,Value=${{ needs.build.outputs.image_tag }}},
-              {Key=Name,Value=quotes-app-green}
-            ]" \
+            --tag-specifications "ResourceType=instance,Tags=[{Key=Environment,Value=green},{Key=Version,Value=${{ needs.build.outputs.image_tag }}},{Key=Name,Value=quotes-app-green}]" \
             --query 'Instances[0].InstanceId' \
             --output text)
 
           echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
           echo "✅ Launched green instance: $INSTANCE_ID"
+
 
       - name: Wait for instance to be ready
         run: |
@@ -125,107 +124,73 @@ jobs:
           echo "⚠️ SSM agent status check timed out, but continuing..."
 
   deploy:
-    name: Deploy Application to Green
-    needs: [build, provision-green]
-    runs-on: ubuntu-latest
+  name: Deploy Application to Green
+  needs: [build, provision-green]
+  runs-on: ubuntu-latest
 
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+  steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
-      - name: Deploy via SSM
-        run: |
-          echo "=== Deploying to green instance ==="
-          echo "Instance ID: ${{ needs.provision-green.outputs.green_instance_id }}"
-          echo "Image Tag: ${{ needs.build.outputs.image_tag }}"
+    - name: Deploy to Green Instance via SSM
+      run: |
+        INSTANCE_ID="${{ needs.provision-green.outputs.green_instance_id }}"
+        TAG="${{ needs.build.outputs.image_tag }}"
+        echo "🚀 Deploying version '${TAG}' to instance '${INSTANCE_ID}'"
 
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Deploy quotes app ${{ needs.build.outputs.image_tag }}" \
-            --timeout-seconds 1800 \
-            --parameters 'commands=[
-              "#!/bin/bash",
-              "set -ex",
-              "echo \"=== Deployment Started at $(date) ===\"",
-              "sudo mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config",
-              "sudo chown -R ubuntu:ubuntu /home/ubuntu/quotes-app",
-              "cd /home/ubuntu/quotes-app",
-              "pwd",
-              "echo \"AWS CLI: $(aws --version)\"",
-              "echo \"Docker: $(docker --version)\"",
-              "echo \"Docker Compose: $(docker-compose --version)\"",
-              "",
-              "echo \"Downloading files from S3...\"",
-              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/docker-compose.yml .",
-              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/nginx-config/ ./nginx-config/ --recursive",
-              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/deployment/ ./deployment/ --recursive",
-              "",
-              "chmod +x deployment/*.sh",
-              "echo \"Files downloaded:\"",
-              "ls -la deployment",
-              "",
-              "echo \"Starting deployment script...\"",
-              "bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green",
-              "",
-              "echo \"=== Deployment Finished at $(date) ===\""
-            ]' \
-            --query 'Command.CommandId' \
-            --output text)
+        CMD=$(cat <<'EOF'
+        #!/bin/bash
+        set -e
+        echo "=== Starting deployment on $(hostname) at $(date) ==="
 
-          echo "Command ID: $COMMAND_ID"
-          echo "Polling deployment status (max 15 minutes)..."
+        BASE_DIR=/home/ubuntu/quotes-app
+        mkdir -p $BASE_DIR/deployment $BASE_DIR/nginx-config
+        cd $BASE_DIR
 
-          MAX_ATTEMPTS=120
-          ATTEMPT=0
+        echo "⬇️ Downloading files from S3..."
+        aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/docker-compose.yml .
+        aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/nginx-config/ ./nginx-config/ --recursive
+        aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/deployment/ ./deployment/ --recursive
 
-          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-            ATTEMPT=$((ATTEMPT + 1))
+        chmod +x deployment/*.sh
+        echo "🚀 Running deployment script..."
+        bash deployment/deploy.sh "${{ secrets.DOCKER_USERNAME }}" "${TAG}" "${{ secrets.DOCKER_PASSWORD }}" green
+        echo "✅ Deployment complete at $(date)"
+        EOF
+        )
 
-            RESULT=$(aws ssm get-command-invocation \
-              --command-id "$COMMAND_ID" \
-              --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" \
-              --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
+        COMMAND_ID=$(aws ssm send-command \
+          --instance-ids "$INSTANCE_ID" \
+          --document-name "AWS-RunShellScript" \
+          --comment "Deploy quotes app ${TAG}" \
+          --parameters "commands=$CMD" \
+          --query 'Command.CommandId' \
+          --output text)
 
-            STATUS=$(echo "$RESULT" | jq -r '.Status')
-            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Status: $STATUS - Time: $(date +%H:%M:%S)"
+        echo "📦 Command ID: $COMMAND_ID"
 
-            if [ "$STATUS" = "Success" ]; then
-              echo ""
-              echo "✅ Deployment successful!"
-              echo ""
-              echo "=== Deployment Output ==="
-              echo "$RESULT" | jq -r '.StandardOutputContent'
-              exit 0
-            fi
+        echo "⏳ Waiting for command to complete..."
+        aws ssm wait command-executed \
+          --command-id "$COMMAND_ID" \
+          --instance-id "$INSTANCE_ID"
 
-            if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ] || [ "$STATUS" = "Cancelled" ]; then
-              echo ""
-              echo "❌ Deployment failed with status: $STATUS"
-              echo ""
-              echo "=== Standard Output ==="
-              echo "$RESULT" | jq -r '.StandardOutputContent'
-              echo ""
-              echo "=== Standard Error ==="
-              echo "$RESULT" | jq -r '.StandardErrorContent'
-              exit 1
-            fi
+        STATUS=$(aws ssm get-command-invocation \
+          --command-id "$COMMAND_ID" \
+          --instance-id "$INSTANCE_ID" \
+          --query 'Status' \
+          --output text)
 
-            sleep 15
-          done
-
-          echo ""
-          echo "❌ Deployment timeout after 15 minutes"
-          RESULT=$(aws ssm get-command-invocation \
-            --command-id "$COMMAND_ID" \
-            --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" \
-            --region ${{ env.AWS_REGION }})
-          echo "$RESULT" | jq -r '.StandardOutputContent'
+        if [ "$STATUS" = "Success" ]; then
+          echo "✅ Deployment successful!"
+        else
+          echo "❌ Deployment failed with status: $STATUS"
           exit 1
+        fi
+
 
   health-check:
     name: Health Check Green Instance
