--- a/.github/workflows/deploy-ssm.yml
+++ b/.github/workflows/deploy-ssm.yml
@@ -144,34 +144,39 @@ jobs:
           TAG="${{ needs.build.outputs.image_tag }}"
           echo "🚀 Deploying version '${TAG}' to instance '${INSTANCE_ID}'"
 
-          CMD=$(cat <<'EOF'
-          #!/bin/bash
-          set -e
-          echo "=== Starting deployment on $(hostname) at $(date) ==="
-
-          BASE_DIR=/home/ubuntu/quotes-app
-          mkdir -p $BASE_DIR/deployment $BASE_DIR/nginx-config
-          cd $BASE_DIR
-
-          echo "⬇️ Downloading files from S3..."
-          aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/docker-compose.yml .
-          aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/nginx-config/ ./nginx-config/ --recursive
-          aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${TAG}/deployment/ ./deployment/ --recursive
-
-          chmod +x deployment/*.sh
-          echo "🚀 Running deployment script..."
-          bash deployment/deploy.sh "${{ secrets.DOCKER_USERNAME }}" "${TAG}" "${{ secrets.DOCKER_PASSWORD }}" green
-          echo "✅ Deployment complete at $(date)"
-          EOF
-          )
-
           COMMAND_ID=$(aws ssm send-command \
-          --instance-ids "$INSTANCE_ID" \
-          --document-name "AWS-RunShellScript" \
-          --comment "Deploy quotes app ${TAG}" \
-          --parameters "commands=$(echo "$CMD" | jq -Rs .)" \
-          --query 'Command.CommandId' \
-          --output text)
+            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
+            --document-name "AWS-RunShellScript" \
+            --comment "Deploy quotes app ${{ needs.build.outputs.image_tag }}" \
+            --timeout-seconds 1800 \
+            --parameters 'commands=[
+              "#!/bin/bash",
+              "set -ex",
+              "echo \"=== Deployment Started at $(date) ===\"",
+              "sudo mkdir -p /home/ubuntu/quotes-app/deployment /home/ubuntu/quotes-app/nginx-config",
+              "sudo chown -R ubuntu:ubuntu /home/ubuntu/quotes-app",
+              "cd /home/ubuntu/quotes-app",
+              "pwd",
+              "echo \"AWS CLI: $(aws --version)\"",
+              "echo \"Docker: $(docker --version)\"",
+              "echo \"Docker Compose: $(docker-compose --version)\"",
+              "",
+              "echo \"Downloading files from S3...\"",
+              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/docker-compose.yml .",
+              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/nginx-config/ ./nginx-config/ --recursive",
+              "aws s3 cp s3://${{ secrets.DEPLOYMENT_BUCKET }}/deployments/${{ needs.build.outputs.image_tag }}/deployment/ ./deployment/ --recursive",
+              "",
+              "chmod +x deployment/*.sh",
+              "echo \"Files downloaded:\"",
+              "ls -la deployment",
+              "",
+              "echo \"Starting deployment script...\"",
+              "bash deployment/deploy.sh ${{ secrets.DOCKER_USERNAME }} ${{ needs.build.outputs.image_tag }} ${{ secrets.DOCKER_PASSWORD }} green",
+              "",
+              "echo \"=== Deployment Finished at $(date) ===\""
+            ]' \
+            --query 'Command.CommandId' \
+            --output text)
 
 
           echo "📦 Command ID: $COMMAND_ID"
@@ -195,77 +200,77 @@ jobs:
           fi
 
 
-  health-check:
-    name: Health Check Green Instance
-    needs: [build, provision-green, deploy]
-    runs-on: ubuntu-latest
+  # health-check:
+  #   name: Health Check Green Instance
+  #   needs: [build, provision-green, deploy]
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+  #   steps:
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v2
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ env.AWS_REGION }}
 
-      - name: Run health check
-        run: |
-          echo "=== Running health check ==="
+  #     - name: Run health check
+  #       run: |
+  #         echo "=== Running health check ==="
 
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Health check for ${{ needs.build.outputs.image_tag }}" \
-            --parameters 'commands=[
-              "cd /home/ubuntu/quotes-app",
-              "bash deployment/health_check.sh"
-            ]' \
-            --timeout-seconds 300 \
-            --query 'Command.CommandId' \
-            --output text)
+  #         COMMAND_ID=$(aws ssm send-command \
+  #           --instance-ids "${{ needs.provision-green.outputs.green_instance_id }}" \
+  #           --document-name "AWS-RunShellScript" \
+  #           --comment "Health check for ${{ needs.build.outputs.image_tag }}" \
+  #           --parameters 'commands=[
+  #             "cd /home/ubuntu/quotes-app",
+  #             "bash deployment/health_check.sh"
+  #           ]' \
+  #           --timeout-seconds 300 \
+  #           --query 'Command.CommandId' \
+  #           --output text)
 
-          echo "Health check command ID: $COMMAND_ID"
+  #         echo "Health check command ID: $COMMAND_ID"
 
-          MAX_ATTEMPTS=30
-          ATTEMPT=0
+  #         MAX_ATTEMPTS=30
+  #         ATTEMPT=0
 
-          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
-            ATTEMPT=$((ATTEMPT + 1))
+  #         while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+  #           ATTEMPT=$((ATTEMPT + 1))
 
-            RESULT=$(aws ssm get-command-invocation \
-              --command-id "$COMMAND_ID" \
-              --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" \
-              --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
+  #           RESULT=$(aws ssm get-command-invocation \
+  #             --command-id "$COMMAND_ID" \
+  #             --instance-id "${{ needs.provision-green.outputs.green_instance_id }}" \
+  #             --region ${{ env.AWS_REGION }} 2>/dev/null || echo '{"Status":"Pending"}')
 
-            STATUS=$(echo "$RESULT" | jq -r '.Status')
-            echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Health Check Status: $STATUS"
+  #           STATUS=$(echo "$RESULT" | jq -r '.Status')
+  #           echo "Attempt $ATTEMPT/$MAX_ATTEMPTS - Health Check Status: $STATUS"
 
-            if [ "$STATUS" = "Success" ]; then
-              echo ""
-              echo "✅ Health check passed!"
-              echo ""
-              echo "$RESULT" | jq -r '.StandardOutputContent'
-              exit 0
-            fi
+  #           if [ "$STATUS" = "Success" ]; then
+  #             echo ""
+  #             echo "✅ Health check passed!"
+  #             echo ""
+  #             echo "$RESULT" | jq -r '.StandardOutputContent'
+  #             exit 0
+  #           fi
 
-            if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ]; then
-              echo ""
-              echo "❌ Health check failed!"
-              echo ""
-              echo "$RESULT" | jq -r '.StandardOutputContent'
-              echo "$RESULT" | jq -r '.StandardErrorContent'
-              exit 1
-            fi
+  #           if [ "$STATUS" = "Failed" ] || [ "$STATUS" = "TimedOut" ]; then
+  #             echo ""
+  #             echo "❌ Health check failed!"
+  #             echo ""
+  #             echo "$RESULT" | jq -r '.StandardOutputContent'
+  #             echo "$RESULT" | jq -r '.StandardErrorContent'
+  #             exit 1
+  #           fi
 
-            sleep 10
-          done
+  #           sleep 10
+  #         done
 
-          echo "❌ Health check timeout"
-          exit 1
+  #         echo "❌ Health check timeout"
+  #         exit 1
 
   register-green:
     name: Register Green and Wait for Healthy Status
-    needs: [provision-green, health-check]
+    needs: [provision-green]
     runs-on: ubuntu-latest
 
     steps:
