--- a/.github/workflows/deploy-ssmm.yml
+++ b/.github/workflows/deploy-ssmm.yml
@@ -74,7 +74,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Create launch template version
+      - name: Create launch template version 
         id: create
         run: |
           TAG=${{ needs.build.outputs.image_tag }}
@@ -84,41 +84,118 @@ jobs:
           set -e
           exec > >(tee /var/log/user-data.log) 2>&1
           
-          yum update -y
-          yum install -y docker aws-cli
+          echo "=== Starting deployment at $(date) ==="
+          
+          # Update system
+          apt-get update -y
+          
+          # Install AWS CLI
+          echo "Installing AWS CLI..."
+          apt-get install -y awscli unzip curl
+          
+          # Install SSM Agent (if not already installed)
+          echo "Installing SSM Agent..."
+          snap install amazon-ssm-agent --classic
+          systemctl enable snap.amazon-ssm-agent.amazon-ssm-agent.service
+          systemctl start snap.amazon-ssm-agent.amazon-ssm-agent.service
+          
+          # Install Docker
+          echo "Installing Docker..."
+          apt-get install -y ca-certificates gnupg lsb-release
+          
+          # Add Docker's official GPG key
+          install -m 0755 -d /etc/apt/keyrings
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+          chmod a+r /etc/apt/keyrings/docker.gpg
+          
+          # Set up Docker repository
+          echo \
+            "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+            $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+          
+          # Install Docker Engine
+          apt-get update -y
+          apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+          
+          # Start and enable Docker
           systemctl enable docker
           systemctl start docker
           
-          curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          chmod +x /usr/local/bin/docker-compose
+          # Add ubuntu user to docker group
+          usermod -aG docker ubuntu
           
+          # Install Docker Compose (standalone)
+          echo "Installing Docker Compose..."
+          DOCKER_COMPOSE_VERSION=$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d '"' -f 4)
+          curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          chmod +x /usr/local/bin/docker-compose
+          ln -sf /usr/local/bin/docker-compose /usr/bin/docker-compose
+          
+          # Install Nginx
+          echo "Installing Nginx..."
+          apt-get install -y nginx
+          systemctl enable nginx
+          
+          # Verify installations
+          echo "=== Verifying installations ==="
+          echo "AWS CLI version: $(aws --version)"
+          echo "SSM Agent status: $(systemctl is-active snap.amazon-ssm-agent.amazon-ssm-agent.service)"
+          echo "Docker version: $(docker --version)"
+          echo "Docker Compose version: $(docker-compose --version)"
+          echo "Nginx version: $(nginx -v 2>&1)"
+          
+          # Setup deployment directory
+          echo "=== Setting up deployment directory ==="
           mkdir -p /home/ubuntu/quotes-app/deployment
+          chown -R ubuntu:ubuntu /home/ubuntu/quotes-app
           cd /home/ubuntu/quotes-app
           
-          aws s3 cp s3://BUCKET/deployments/TAG/docker-compose.yml .
-          aws s3 cp s3://BUCKET/deployments/TAG/deployment/ ./deployment/ --recursive
-          aws s3 cp s3://BUCKET/deployments/TAG/quotes.conf .
+          # Download deployment files from S3
+          echo "=== Downloading deployment files ==="
+          aws s3 cp s3://BUCKET/deployments/TAG/docker-compose.yml . || exit 1
+          aws s3 cp s3://BUCKET/deployments/TAG/deployment/ ./deployment/ --recursive || exit 1
+          aws s3 cp s3://BUCKET/deployments/TAG/quotes.conf . || exit 1
           
+          # Make scripts executable
           chmod +x deployment/*.sh
-          bash deployment/deploy.sh USER TAG PASS production
+          
+          # Run deployment script
+          echo "=== Running deployment script ==="
+          bash deployment/deploy.sh USER TAG PASS production || exit 1
+          
+          # Configure Nginx
+          echo "=== Configuring Nginx ==="
+          if [ -f quotes.conf ]; then
+            cp quotes.conf /etc/nginx/sites-available/quotes.conf
+            ln -sf /etc/nginx/sites-available/quotes.conf /etc/nginx/sites-enabled/quotes.conf
+            rm -f /etc/nginx/sites-enabled/default
+            nginx -t && systemctl restart nginx
+          fi
+          
+          echo "=== Deployment completed successfully at $(date) ==="
           EOF
           
+          # Replace placeholders with actual values
           sed -i "s|BUCKET|${{ secrets.DEPLOYMENT_BUCKET }}|g" user-data.sh
           sed -i "s|TAG|${TAG}|g" user-data.sh
           sed -i "s|USER|${{ secrets.DOCKER_USERNAME }}|g" user-data.sh
           sed -i "s|PASS|${{ secrets.DOCKER_PASSWORD }}|g" user-data.sh
           
+          # Base64 encode for launch template
           USER_DATA_B64=$(base64 -w 0 user-data.sh)
           
+          # Create launch template version
           VERSION=$(aws ec2 create-launch-template-version \
             --launch-template-id ${{ env.LAUNCH_TEMPLATE_ID }} \
             --source-version '$Latest' \
             --launch-template-data "{\"UserData\":\"${USER_DATA_B64}\"}" \
-            --version-description "Deploy ${TAG}" \
+            --version-description "Deploy ${TAG} - $(date '+%Y-%m-%d %H:%M:%S')" \
             --query 'LaunchTemplateVersion.VersionNumber' \
             --output text)
           
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "✅ Created launch template version: $VERSION"
+
 
   get-old-instances:
     needs: create-launch-template
@@ -192,7 +269,7 @@ jobs:
           echo "✅ Launched: $INSTANCE_ID"
           
           aws ec2 wait instance-running --instance-ids $INSTANCE_ID
-          sleep 120
+          sleep 140
           
           # Health check
           CMD=$(aws ssm send-command \
@@ -204,22 +281,22 @@ jobs:
             
             sleep 10
             
-            STATUS=$(aws ssm get-command-invocation \
+          STATUS=$(aws ssm get-command-invocation \
               --command-id "$CMD" \
               --instance-id "$INSTANCE_ID" \
               --query 'StandardOutputContent' \
               --output text 2>/dev/null | tr -d '\n\r ' || echo "000")
             
-            if [ "$STATUS" = "200" ]; then
+          if [ "$STATUS" = "200" ]; then
               HEALTHY=true
               echo "✅ Health check passed"
               break
             fi
             
-            sleep 20
-          done
+          sleep 20
           
-          if [ "$HEALTHY" = false ]; then
+          
+          if [ "$STATUS" !="200" ]; then
             echo "❌ Health check failed"
             aws ec2 terminate-instances --instance-ids $INSTANCE_ID
             exit 1
